--- a/arithmetic.html
+++ b/arithmetic.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
-  <link href= "css/bootstrap.css" rel= "stylesheeet" type= "text/css">
-  <link href= "css/styles.css" rel= "stylesheeet" type= "text/css">
+  <link href= "css/bootstrap.css" rel= "stylesheet" type= "text/css">
+  <link href= "css/styles.css" rel= "stylesheet" type= "text/css">
   <script src= "js/jquery-3.6.0.min.js"></script>
   <script src= "js/script.js"></script>
   <title>Arithmetic Calculator</title>
-  <div class= "container">
+ </head>
+
+<body>
+
+  <div class="container">
     <h1>Arithmetic Calculator</h1>
-    <form id= "add">
-      <div class= "form-group">
-        <label for= "add1">1st number:</label>
-        <input id= "add1" class= "form-control" type= "text">
+    <form id="add">
+      <div class="form-group">
+        <label for="add1">1st number:</label>
+        <input id="add1" class="form-control" type="text">
       </div>
+       
       <div class= "form-group">
         <label for= "add2">2nd number:</label>
-        <input id= "add2" class= "form-control" type= "text">
+        <input id="add2" class="form-control" type="text">
       </div>
-      <button type="submit" class= "btn">Add!</button>
+
+      <button type="submit" class="btn">Add!</button>
       <button type="submit" class="btn">Subtract!</button>
       <button type="submit" class="btn">Multiply!</button>
       <button type="submit" class="btn">Divide!</button>
       <button type="submit" class="btn">Remainder!</button>
     </form>
   </div>
-</head>
-<body>
-  
 </body>
 </html>
