--- a/arithmetic.html
+++ b/arithmetic.html
@@ -43,10 +43,23 @@
           Multiply!
         </label>
         </div>
-        <button type="submit" class="btn">Calculate!</button>
+        <div class="radio">
+        <label>
+          <input type="radio" name="calculate" value="divide">
+          Divide!
+        </label>
+        </div>
+        <div class="radio">
+        <label>
+          <input type="radio" name="calculate" value="remainder">
+          Remainder!
+        </label>
+        </div>
+      
+        <button type="submit" class="btn"><strong>Calculate!</strong></button>
     </form>
     <div id="output">
-
+  
     </div>
   </div>
 </body>
