add initial corrections

--- a/arithmetic.html
+++ b/arithmetic.html
@@ -51,8 +51,8 @@
         </div>
         <div class="radio">
         <label>
-          <input type="radio" name="calculate" value="remainder">
-          Remainder!
+          <input type="radio" name="calculate" value="percentage">
+          Percentage!
         </label>
         </div>
       
